--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     </div>
 
                     <div class="header-button">
-                        <a href="#" class="btn tj-btn-primary">Hire me!</a>
+                        <a href="er.sandeep915@gmail.com" class="btn tj-btn-primary">Hire me!</a>
                     </div>
 
                     <div class="menu-bar d-lg-none">
