--- a/blog.html
+++ b/blog.html
@@ -92,7 +92,7 @@
           </div>
 
           <div class="header-button">
-            <a href="#" class="btn tj-btn-primary">Hire me!</a>
+            <a href="er.sandeep915@gmail.com" class="btn tj-btn-primary">Hire me!</a>
           </div>
 
           <div class="menu-bar d-lg-none">
@@ -138,7 +138,7 @@
           </div>
 
           <div class="header-button">
-            <a href="#" class="btn tj-btn-primary">Hire me!</a>
+            <a href="er.sandeep915@gmail.com" class="btn tj-btn-primary">Hire me!</a>
           </div>
 
           <div class="menu-bar d-lg-none">
