--- a/index.html
+++ b/index.html
@@ -102,9 +102,10 @@
                         </nav>
                     </div>
 
-                    <div class="header-button">
-                        <a href="mailto:er.sandeep915@gmail.com" class="btn tj-btn-primary">Hire me!</a>
-                    </div>
+                     <div class="header-button">
+                            <a href="mailto:er.sandeep915@gmail.com?subject=Hiring%20Inquiry&body=Hello%2C%20I%20would%20like%20to%20discuss%20a%20potential%20job%20opportunity%20with%20you." class="btn tj-btn-primary">Hire me!</a>
+                          </div>
+                          
 
                     <div class="menu-bar d-lg-none">
                         <button>
