--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="" />
 
     <!-- Site Title -->
-    <title>my portfolio</title>
+    <title>jjjjjj</title>
 
     <!-- Place favicon.ico in the root directory -->
     <link rel="apple-touch-icon" href="./assets/img/favicon.png" />
