--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                             <p class="lead wow fadeInLeft" data-wow-delay="1.4s">I break down complex user experinece
                                 problems to create integritiy focussed solutions that connect billions of people</p>
                             <div class="button-box d-flex flex-wrap align-items-center">
-                                <a href="./sandeeresume.pdf" class="btn tj-btn-secondary wow fadeInLeft" data-wow-delay="1.5s">Download
+                              <a href="./final resume.pdf" class="btn tj-btn-secondary wow fadeInLeft" data-wow-delay="1.5s">Download
                                     CV</a>
                                 <ul class="ul-reset social-icons wow fadeInLeft" data-wow-delay="1.6s">
                                     <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
