--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html class="no-js" lang="en">
 
 <head>
@@ -8,7 +8,7 @@
     <meta name="description" content="" />
 
     <!-- Site Title -->
-    <title>My-Portfolio</title>
+    <title>my portfolio</title>
 
     <!-- Place favicon.ico in the root directory -->
     <link rel="apple-touch-icon" href="./assets/img/favicon.png" />
@@ -42,7 +42,7 @@
 <body>
 
     <!-- Preloader Area Start -->
-    <!-- <div class="preloader">
+    <div class="preloader">
         <svg viewBox="0 0 1000 1000" preserveAspectRatio="none">
             <path id="preloaderSvg" d="M0,1005S175,995,500,995s500,5,500,5V0H0Z"></path>
         </svg>
@@ -58,7 +58,7 @@
                 <span>g</span>
             </div>
         </div>
-    </div> -->
+    </div>
     <!-- Preloader Area End -->
 
 
@@ -102,10 +102,12 @@
                         </nav>
                     </div>
 
-                     <div class="header-button">
+                    <div class="header-button">
+                        <div class="header-button">
                             <a href="mailto:er.sandeep915@gmail.com?subject=Hiring%20Inquiry&body=Hello%2C%20I%20would%20like%20to%20discuss%20a%20potential%20job%20opportunity%20with%20you." class="btn tj-btn-primary">Hire me!</a>
                           </div>
                           
+                    </div>
 
                     <div class="menu-bar d-lg-none">
                         <button>
@@ -193,7 +195,7 @@
                             <p class="lead wow fadeInLeft" data-wow-delay="1.4s">I break down complex user experinece
                                 problems to create integritiy focussed solutions that connect billions of people</p>
                             <div class="button-box d-flex flex-wrap align-items-center">
-                              <a href="./final resume.pdf" class="btn tj-btn-secondary wow fadeInLeft" data-wow-delay="1.5s">Download
+                                <a href="./final resume.pdf" class="btn tj-btn-secondary wow fadeInLeft" data-wow-delay="1.5s">Download
                                     CV</a>
                                 <ul class="ul-reset social-icons wow fadeInLeft" data-wow-delay="1.6s">
                                     <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
@@ -273,7 +275,7 @@
                                         that connect billions of people</p>
                                 </div>
                                 <i class="flaticon-up-right-arrow"></i>
-                                <button data-mfp-src="#service-wrapper" class="service-link modal-popup"></button>
+                                <button data-mfp-src="#portfolio-wrapper2" class="service-link modal-popup"></button>
                             </div>
                             <div class="service-item d-flex flex-wrap align-items-center wow fadeInUp"
                                 data-wow-delay=".6s">
@@ -287,7 +289,7 @@
                                         that connect billions of people</p>
                                 </div>
                                 <i class="flaticon-up-right-arrow"></i>
-                                <button data-mfp-src="#service-wrapper" class="service-link modal-popup"></button>
+                                <button data-mfp-src="#portfolio-wrapper" class="service-link modal-popup"></button>
                             </div>
                             <div class="service-item d-flex flex-wrap align-items-center wow fadeInUp"
                                 data-wow-delay=".7s">
@@ -297,11 +299,11 @@
                                 </div>
                                 <div class="right-box">
                                     <p>I break down complex user experinece problems to create integritiy focussed
-                                        solutions
+                                        solutionss
                                         that connect billions of people</p>
                                 </div>
                                 <i class="flaticon-up-right-arrow"></i>
-                                <button data-mfp-src="#service-wrapper" class="service-link modal-popup"></button>
+                                <button data-mfp-src="#portfolio-wrapper1" class="service-link modal-popup"></button>
                             </div>
                             <div class="service-item d-flex flex-wrap align-items-center wow fadeInUp"
                                 data-wow-delay=".8s">
@@ -315,7 +317,7 @@
                                         that connect billions of people</p>
                                 </div>
                                 <i class="flaticon-up-right-arrow"></i>
-                                <button data-mfp-src="#service-wrapper" class="service-link modal-popup"></button>
+                                <button data-mfp-src="#portfolio-wrapper4" class="service-link modal-popup"></button>
                             </div>
                             <div class="active-bg wow fadeInUp" data-wow-delay=".5s"></div>
                         </div>
